--- a/.github/workflows/ci_cd_pipeline.yml
+++ b/.github/workflows/ci_cd_pipeline.yml
@@ -8,41 +8,58 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout your repository
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Install dependencies, including Docker and MySQL client
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y mysql-client python3 python3-pip docker.io
+          # install docker, mysql client, python and pip
+          sudo apt-get install -y docker.io mysql-client python3 python3-pip
           pip3 install mysql-connector-python
 
-      # Start MySQL via Docker directly instead of using services
+      # Start a clean MySQL container
       - name: Start MySQL container
+      # Use secrets for the password; act will pick this up from your .secrets file
         env:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
+          # Remove any existing MySQL container named 'mysql'
+          docker rm -f mysql || true
+
+          # Start a new MySQL container with root password and pre‑create project_db
           docker run -d --name mysql \
             -e MYSQL_ROOT_PASSWORD=$DB_PASSWORD \
             -e MYSQL_DATABASE=project_db \
             -p 3306:3306 \
             mysql:8.0
-          # wait for MySQL to accept connections
+
+          # Wait until the server is ready to accept connections
           for i in {1..10}; do
-            mysql -h 127.0.0.1 -u root -p$DB_PASSWORD -e "SELECT 1;" && break
+            if mysql -h 127.0.0.1 -u root -p$DB_PASSWORD -e "SELECT 1;" >/dev/null 2>&1; then
+              break
+            fi
+            echo "Waiting for MySQL to become available..."
             sleep 3
           done
 
-      - name: Run schema changes
+      # Run any initial SQL script (optional if flyway already creates database)
+      - name: Apply schema_changes.sql
         env:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: mysql -h 127.0.0.1 -u root -p$DB_PASSWORD < schema_changes.sql
+        run: |
+          mysql -h 127.0.0.1 -u root -p$DB_PASSWORD < schema_changes.sql
 
-      - name: Pull Flyway
+      # Pull the Flyway Docker image
+      - name: Pull Flyway image
         run: docker pull redgate/flyway
 
-      - name: Apply migrations
+      # Apply Flyway migrations
+      - name: Run Flyway migrations
         env:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
@@ -55,19 +72,22 @@ jobs:
             -url="jdbc:mysql://127.0.0.1:3306/project_db?allowPublicKeyRetrieval=true&useSSL=false" \
             migrate
 
-      - name: Run concurrent queries
+      # Run your multi-threaded Python test
+      - name: Run concurrent climate queries
         env:
           DB_HOST: 127.0.0.1
           DB_USER: root
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: project_db
-        run: python3 scripts/multi_thread_queries.py
+        run: |
+          python3 scripts/multi_thread_queries.py
 
-      - name: Validate schema and data
+      # Validate the table schema and data
+      - name: Validate schema and row count
         env:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
-          echo "Table definition:"
+          echo "Schema definition:"
           mysql -h 127.0.0.1 -u root -p$DB_PASSWORD -e "DESCRIBE project_db.ClimateData;"
           echo "Row count:"
           mysql -h 127.0.0.1 -u root -p$DB_PASSWORD -e "SELECT COUNT(*) FROM project_db.ClimateData;"
