--- a/.gitignore
+++ b/.gitignore
@@ -1,176 +1,77 @@
-# Byte-compiled / optimized / DLL files
+# ───── Local secrets / env (never commit) ──────────────────────────────────────
+.secrets
+.env
+.env.*
+*.secret
+*.secrets
+
+# ───── Python ──────────────────────────────────────────────────────────────────
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
+.venv/
 venv/
 ENV/
-env.bak/
-venv.bak/
+env/
+.python-version
+.ipynb_checkpoints/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Packaging/build
+build/
+dist/
+*.egg-info/
+.eggs/
+wheels/
+pip-wheel-metadata/
 
-# Rope project settings
-.ropeproject
+# Testing & coverage
+.coverage
+.coverage.*
+.pytest_cache/
+.tox/
+.nox/
+coverage.xml
+htmlcov/
 
-# mkdocs documentation
-/site
-
-# mypy
+# Linters / type checkers
 .mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
+.pytype/
+.ruff_cache/
 .pyre/
 
-# pytype static type analyzer
-.pytype/
+# Logs
+*.log
+logs/
 
-# Cython debug symbols
-cython_debug/
+# ───── Editors / IDEs (remove .vscode/ if you want to keep workspace settings) ─
+.vscode/
+.idea/
+*.code-workspace
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# OS files
+.DS_Store
+Thumbs.db
 
-# Ruff stuff:
-.ruff_cache/
+# ───── Docker / Compose ────────────────────────────────────────────────────────
+docker-compose.override.yml
+*.local.yml
+*.override.yml
+.env.docker
+.env.local
 
-# PyPI configuration file
-.pypirc
+# ───── Ansible ─────────────────────────────────────────────────────────────────
+*.retry
 
-bin
+# ───── Local data/artifacts (created during experiments) ───────────────────────
+signoz-data/
+mysql-data/
+tmp/
+tmp/**
+
+# ───── nektos/act local cache (if any) ─────────────────────────────────────────
+.act/
+
+# NOTE: Flyway migrations are KEPT (do not ignore them)
+# (We're not ignoring *.sql, but keep these lines in case you add broader rules later)
+!migrations/
+!migrations/**/*.sql
